# litebox

./: .gitignore  .gitmodules  BITFIELD_IMPROVEMENTS.md  Cargo.toml  PLAN.md  PR_SUMMARY.md  README.md  bacon.toml  prompt.txt
dev_bench/: Cargo.toml
dev_bench/src/: main.rs
litebox/: Cargo.toml
litebox-platform-linux-kernel/: Cargo.toml  build.rs  wrapper.h
litebox-platform-linux-kernel/src/: error.rs  lib.rs
litebox-platform-linux-kernel/src/host/: hypercall.rs  linux.rs  mod.rs  snp.rs
litebox/src/: event.rs  fd.rs  lib.rs  litebox.rs  path.rs  pipes.rs  platform.rs  shim.rs  tls.rs  upcall.rs
litebox/src/event/: mod.rs  observer.rs  polling.rs  wait.rs
litebox/src/fd/: mod.rs  temp_old_stuff.rs  tests.rs
litebox/src/fs/: devices.rs  errors.rs  in_mem.rs  layered.rs  mod.rs  nine_p.rs  shared.rs  tar_ro.rs  test.tar  tests.rs
litebox/src/mm/: alloc.rs  allocator.rs  exception_table.rs  linux.rs  mapping.rs  memcpy_fallible_32.S  memcpy_fallible_64.S  mod.rs  tests.rs  vm.rs
litebox/src/net/: errors.rs  local_ports.rs  mod.rs  phy.rs  socket_channel.rs  sockets.rs  tests.rs
litebox/src/platform/: mock.rs  mod.rs  page_mgmt.rs  (+3 more)
litebox_common_bsd/: Cargo.toml
litebox_common_bsd/src/: lib.rs  loader.rs  syscall_nr.rs
litebox_common_lvbs/: Cargo.toml
litebox_common_lvbs/src/: error.rs  heki.rs  hvcall.rs  lib.rs  linux.rs  mem_layout.rs  mshv.rs  vsm.rs
litebox_optee_interface/: Cargo.toml
litebox_optee_interface/src/: lib.rs
litebox_platform_baremetal/: BAREMETAL_DESIGN.md  Cargo.toml
litebox_platform_baremetal/src/: arch.rs  interrupts.rs  lib.rs  memory.rs  serial.rs  time.rs
litebox_platform_freebsd_userland/: Cargo.toml  README.md
litebox_platform_freebsd_userland/src/: freebsd_types.rs  lib.rs  syscall_raw.rs
litebox_platform_freebsd_userland/tests/: syscalls.rs
litebox_platform_linux_kernel/: Cargo.toml  build.rs  snp-sandbox.h
litebox_platform_linux_kernel/src/: error.rs  lib.rs  ptr.rs
litebox_platform_linux_userland/: Cargo.toml
litebox_platform_linux_userland/src/: lib.rs  mm.rs  ptr.rs  utils.rs
litebox_platform_lvbs_isr/: Cargo.toml  README.md
litebox_platform_lvbs_isr/src/: lib.rs
litebox_platform_mock_nostd/: Cargo.toml  README.md
litebox_platform_mock_nostd/src/: lib.rs
litebox_platform_multiplex/: Cargo.toml  build.rs
litebox_platform_multiplex/src/: lib.rs
litebox_platform_windows_userland/: Cargo.toml  README.md
litebox_platform_windows_userland/src/: lib.rs  perf_counter.rs
litebox_runner_baremetal/: Cargo.toml  README.md
litebox_runner_baremetal/src/: main.rs
litebox_runner_command_dispatcher/: Cargo.toml  README.md
litebox_runner_command_dispatcher/src/: lib.rs
litebox_runner_linux_on_windows_userland/: Cargo.toml  build.rs
litebox_runner_linux_on_windows_userland/src/: lib.rs  main.rs
litebox_runner_linux_on_windows_userland/tests/: loader.rs
litebox_runner_linux_userland/: Cargo.toml  build.rs  temp.tar
litebox_runner_linux_userland/src/: lib.rs  main.rs
litebox_runner_linux_userland/tests/: access_test.c  alarm.c  cache.rs  chmod_test.c  cwd_test.c  demo_ls_script.sh  dup_test.c  efault.c  epoll_test.c  error_handling.rs  eventfd_test.c  execve.c  fcntl_test.c  fileio_test.c  flock_test.c  fsync_test.c  getdents_test.c  hello.c  iovec_test.c  link_test.c  loader.rs  lseek_test.c  mkdir_test.c  mmap_advanced.c  pipe_test.c  poll_select.c  preadwrite_test.c  procid_test.c  rename_test.c  rlimit_test.c  run.rs  script_execve.c  script_with_ls.c  sigint.c  sigmask_test.c  signal.c  sigpipe_test.c  stat_test.c  test_script.sh  thread.c  (+6 more)
litebox_runner_lvbs/: Cargo.toml  README.md  rust-toolchain.toml  x86_64-vtl1-none.json  x86_64_vtl1.json  x86_64_vtl1.ld
litebox_runner_lvbs/.cargo/: config.toml
litebox_runner_lvbs/src/: lib.rs  main.rs  mem_integrity.rs  optee_smc.rs  ringbuffer.rs  vsm.rs  vtl_switch.rs
litebox_runner_macos_on_linux_userland/: Cargo.toml  README.md
litebox_runner_macos_on_linux_userland/src/: lib.rs  main.rs
litebox_runner_macos_on_linux_userland/test_binaries/: Makefile  dyld_stub_macos  dyld_stub_macos.s  hello_dynamic_macos  hello_dynamic_macos.s  hello_puts_semantic_macos  hello_puts_semantic_macos.s  populate_macos_runtime.sh  zig_basic.c  zig_basic_macos  zig_io_mm.c  zig_io_mm_macos
litebox_runner_newlib/: Cargo.toml  README.md  build.rs  x86_64-litebox.json
litebox_runner_newlib/.cargo/: config.toml
litebox_runner_newlib/src/: lib.rs
litebox_runner_optee_on_hypervisor/: Cargo.toml  build.sh  run-qemu.sh
litebox_runner_optee_on_hypervisor/.cargo/: config.toml
litebox_runner_optee_on_hypervisor/src/: main.rs
litebox_runner_optee_on_linux_userland/: Cargo.toml
litebox_runner_optee_on_linux_userland/src/: command_dispatcher.rs  lib.rs  main.rs  tests.rs
litebox_runner_optee_on_linux_userland/tests/: LICENSE.txt  aes-ta-cmds.json  aes-ta.elf  aes-ta.elf.hooked  hello-ta-cmds.json  hello-ta.elf  hello-ta.elf.hooked  kmpp-ta-2.elf  kmpp-ta-cmds.json  kmpp-ta.elf  kmpp-ta.elf.hooked  ldelf.elf  ldelf.elf.hooked  loader.rs  random-ta-cmds.json  random-ta.elf  random-ta.elf.hooked  run.rs
litebox_runner_snp/: Cargo.toml  kernel.ld  target.json
litebox_runner_snp/src/: entry.S  globals.rs  main.rs  test.tar
litebox_shim_bsd/: Cargo.toml
litebox_shim_bsd/src/: lib.rs
litebox_shim_linux/: Cargo.toml  README.md  hello_dylib
litebox_shim_linux/src/: channel.rs  errno.rs  event.rs  lib.rs  nine_p.rs  stdio.rs  wait.rs
litebox_shim_linux/tests/: dylib.rs  exec.rs
litebox_shim_optee/: Cargo.toml  README.md
litebox_shim_optee/src/: channel.rs  lib.rs  msg_handler.rs  msg_proto.rs  ptr.rs  session.rs  signed_hdr.rs  stdio.rs
litebox_shim_optee/tests/: exec.rs  hello.c
litebox_syscall_rewriter/: Cargo.toml
litebox_syscall_rewriter/src/: lib.rs  main.rs  rewriter.rs
litebox_syscall_rewriter/tests/: hello  hello-32  snapshot_tests.rs
litebox_util_log/: Cargo.toml
litebox_util_log/examples/: demo.rs
litebox_util_log/src/: backend_log.rs  backend_tracing.rs  lib.rs  macros.rs
litebox_util_log/tests/: facade.rs
(+389 files in other folders)
