[workspace]
resolver = "2"
members = [
    "litebox", 
    "litebox_common_linux",
    "litebox_platform_linux_userland",
    "litebox_platform_freebsd_userland",
    "litebox_platform_multiplex",
    "litebox_shim_linux",
    "litebox_syscall_rewriter",
]

# exclude binaries which need different toolchain and build target.
exclude = [
    "litebox_platform_lvbs",
    "litebox_runner_lvbs",
    "litebox_platform_linux_kernel", # just temporarily from from the workspace to test freebsd
    "litebox_runner_linux_userland", # just temporarily from from the workspace to test freebsd
]

# Introduce all the pedantic clippy lints and remove ones I (jayb) think are
# pushing it too far; this way we get something even further than default clippy
# but not _too_ ridiculous.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unreadable_literal = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
needless_pass_by_value = "allow"
redundant_else = "allow"
must_use_candidate = "allow"
