[workspace]
resolver = "2"
members = [
    "litebox", 
    "litebox_common_linux",
    "litebox_platform_linux_kernel",
    "litebox_platform_linux_userland",
    "litebox_platform_freebsd_userland",
    "litebox_platform_windows_userland",
    "litebox_platform_multiplex",
    "litebox_runner_linux_userland",
    "litebox_runner_linux_on_windows_userland",
    "litebox_shim_linux",
    "litebox_syscall_rewriter",
]

# exclude binaries which need different toolchain and build target.
exclude = [
    "litebox_platform_lvbs",
    "litebox_runner_lvbs"
]

# Introduce all the pedantic clippy lints and remove ones I (jayb) think are
# pushing it too far; this way we get something even further than default clippy
# but not _too_ ridiculous.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unreadable_literal = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
needless_pass_by_value = "allow"
redundant_else = "allow"
must_use_candidate = "allow"
