[package]
name = "litebox_optee_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
hashbrown = "0.15.2"
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
num_enum = { version = "0.7.3", default-features = false }
once_cell = { version = "1.20.2", default-features = false, features = ["alloc", "race"] }
spin = { version = "0.10.0", default-features = false, features = [
  "spin_mutex",
  "once",
  "rwlock",
] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }

[lints]
workspace = true
