[package]
name = "litebox_platform_baremetal"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex", "once", "rwlock"] }
buddy_system_allocator = { version = "0.11.0", default-features = false, features = ["use_spin"] }
arrayvec = { version = "0.7.6", default-features = false }
rangemap = { version = "1.5.1", features = ["const_fn"] }
thiserror = { version = "2.0.6", default-features = false }
uart_16550 = "0.3.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15.2", default-features = false, features = ["instructions", "abi_x86_interrupt"] }

[lints]
workspace = true
