[package]
name = "litebox_platform_freebsd_userland"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { version = "0.2.169", default-features = false }
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux", version = "0.1.0" }
spin = "0.9.8"
bitflags = "2.6.0"

[lints]
workspace = true
