[package]
name = "litebox_platform_linux_kernel"
version = "0.1.0"
edition = "2024"

[features]
platform_snp = []

[build-dependencies]
bindgen = "0.71.0"

[dependencies]
buddy_system_allocator = { version = "0.11.0", default-features = false, features = ["use_spin"] }
slabmalloc = { git = "https://github.com/MSRSSP/rust-slabmalloc.git" }
litebox = { path = "../litebox/", version = "0.1.0" }
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }
libc = "0.2.169"
arrayvec = { version = "0.7.6", default-features = false }