[package]
name = "litebox_platform_linux_kernel"
version = "0.1.0"
edition = "2024"

[features]

[build-dependencies]
bindgen = "0.71.0"

[dependencies]
bitflags = "2.9.0"
buddy_system_allocator = { version = "0.11.0", default-features = false, features = ["use_spin"] }
slabmalloc = { git = "https://github.com/gz/rust-slabmalloc.git", rev = "19480b2e82704210abafe575fb9699184c1be110" }
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }
libc = "0.2.169"
arrayvec = { version = "0.7.6", default-features = false }
rangemap = { version = "1.5.1", features = ["const_fn"] }
thiserror = { version = "2.0.6", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }

[lints]
workspace = true
