[package]
name = "litebox_platform_linux_userland"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { version = "0.2.169", default-features = false }
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux", version = "0.1.0" }
nix = { version = "0.29.0", default-features = false, features = ["fs", "ioctl", "mman", "signal"] }
seccompiler = "0.5.0"

[lints]
workspace = true
