[package]
name = "litebox_platform_linux_userland"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { version = "0.2.169", default-features = false, optional = true }
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux", version = "0.1.0" }
seccompiler = { version = "0.5.0", optional = true }
spin = "0.9.8"
syscalls = { version = "0.6", default-features = false }

[features]
systrap_backend = ["dep:seccompiler", "dep:libc"]

[lints]
workspace = true
