[package]
name = "litebox_platform_lvbs_isr"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
litebox_platform_lvbs = { version = "0.1.0", path = "../litebox_platform_lvbs" }
spin = { version = "0.10.0", default-features = false, features = ["once"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15.2", default-features = false, features = ["abi_x86_interrupt"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unreadable_literal = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
needless_pass_by_value = "allow"
redundant_else = "allow"
must_use_candidate = "allow"
