[package]
name = "litebox_platform_mock_nostd"
version = "0.1.0"
edition = "2024"

[dependencies]
litebox = { path = "../litebox/", version = "0.1.0", default-features = false }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
syscalls = { version = "0.6", default-features = false }

[lints]
workspace = true
