[package]
name = "litebox_platform_multiplex"
version = "0.1.0"
edition = "2024"

[dependencies]
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_platform_linux_userland = { path = "../litebox_platform_linux_userland/", version = "0.1.0", default-features = false, optional = true }
litebox_platform_freebsd_userland = { path = "../litebox_platform_freebsd_userland/", version = "0.1.0", optional = true }
litebox_platform_windows_userland = { path = "../litebox_platform_windows_userland/", version = "0.1.0", default-features = false, optional = true }
once_cell = { version = "1.20.2", default-features = false, features = ["alloc", "race"] }

[features]
default = ["platform_linux_userland"]
platform_linux_userland = ["dep:litebox_platform_linux_userland"]
platform_freebsd_userland = ["dep:litebox_platform_freebsd_userland"]
platform_windows_userland = ["dep:litebox_platform_windows_userland"]
systrap_backend = ["platform_linux_userland", "litebox_platform_linux_userland/systrap_backend"]

[lints]
workspace = true
