[package]
name = "litebox_platform_windows_userland"
version = "0.1.0"
edition = "2024"

[dependencies]
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux", version = "0.1.0" }

windows-sys = { version = "0.60.2", features = [ "Win32_Foundation", "Win32_System_Memory", "Win32_System_Threading", "Win32_System_SystemInformation", "Win32_Security" ] }

[lints]
workspace = true
