[package]
name = "litebox_runner_baremetal"
version = "0.1.0"
edition = "2024"

[dependencies]
litebox = { path = "../litebox", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
litebox_platform_baremetal = { path = "../litebox_platform_baremetal", version = "0.1.0" }
arrayvec = { version = "0.7.6", default-features = false }
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
x86_64 = "0.15.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lints]
workspace = true
