[package]
name = "litebox_runner_command_dispatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = { version = "1.20.2", default-features = false, features = ["alloc", "race"] }
litebox_common_optee = { path = "../litebox_common_optee/", version = "0.1.0" }

[lints]
workspace = true
