[package]
name = "litebox_runner_linux_userland"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.33", features = ["derive"] }
litebox = { version = "0.1.0", path = "../litebox" }
litebox_platform_linux_userland = { version = "0.1.0", path = "../litebox_platform_linux_userland" }
litebox_platform_multiplex = { version = "0.1.0", path = "../litebox_platform_multiplex", default-features = false, features = ["platform_linux_userland", "systrap_backend"] }
litebox_shim_linux = { version = "0.1.0", path = "../litebox_shim_linux" }
litebox_syscall_rewriter = { version = "0.1.0", path = "../litebox_syscall_rewriter" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }

[lints]
workspace = true
