[package]
name = "litebox_runner_lvbs"
version = "0.1.0"
edition = "2024"

[dependencies]
litebox = { version = "0.1.0", path = "../litebox" }
litebox_platform_lvbs = { version = "0.1.0", path = "../litebox_platform_lvbs", default-features = false }
litebox_platform_multiplex = { version = "0.1.0", path = "../litebox_platform_multiplex", default-features = false, features = ["platform_lvbs"] }
litebox_common_optee = { path = "../litebox_common_optee/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
litebox_common_lvbs = { path = "../litebox_common_lvbs/", version = "0.1.0" }
litebox_shim_optee = { path = "../litebox_shim_optee/", version = "0.1.0" }
spin = { version = "0.10.0", default-features = false, features = ["spin_mutex"] }
hashbrown = "0.15.2"
once_cell = { version = "1.21.3", default-features = false, features = ["race", "alloc"] }
num_enum = { version = "0.7.4", default-features = false }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
x509-cert = { version = "0.2.5", default-features = false }


[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }

[lints]
workspace = true
