[package]
name = "litebox_runner_macos_on_linux_userland"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "litebox_runner_macos_on_linux_userland"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
litebox_common_linux = { path = "../litebox_common_linux", version = "0.1.0" }
litebox_platform_linux_userland = { path = "../litebox_platform_linux_userland", version = "0.1.0" }
litebox_platform_multiplex = { path = "../litebox_platform_multiplex", version = "0.1.0", default-features = false, features = ["platform_linux_userland", "systrap_backend"] }
litebox_shim_bsd = { path = "../litebox_shim_bsd", version = "0.1.0" }
memmap2 = "0.9"

[lints]
workspace = true
