[package]
name = "litebox_runner_newlib"
version = "0.1.0"
edition = "2024"

[dependencies]
litebox = { path = "../litebox" }
litebox_common_linux = { path = "../litebox_common_linux" }
litebox_shim_linux = { path = "../litebox_shim_linux" }
litebox_platform_multiplex = { path = "../litebox_platform_multiplex", default-features = false }

[lib]
name = "litebox_newlibrunner"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
