[package]
name = "litebox_runner_newlib"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
litebox = { path = "../litebox" }
litebox_common_linux = { path = "../litebox_common_linux" }
litebox_shim_linux = { path = "../litebox_shim_linux" }
litebox_platform_multiplex = { path = "../litebox_platform_multiplex", default-features = false }
syscalls = { version = "0.6", default-features = false }

[lib]
name = "litebox_newlibrunner"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = []
platform_mock_nostd = [
    "litebox_platform_multiplex/platform_mock_nostd"
]
platform_linux_userland = [
    "litebox_platform_multiplex/platform_linux_userland"
]

