[package]
name = "litebox_runner_optee_on_linux_userland"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
arrayvec = { version = "0.7.6", default-features = false }
base64 = "0.22.1"
clap = { version = "4.5.33", features = ["derive"] }
libc = { version = "0.2.169", default-features = false }
litebox = { version = "0.1.0", path = "../litebox" }
litebox_common_optee = { version = "0.1.0", path = "../litebox_common_optee" }
litebox_platform_linux_userland = { version = "0.1.0", path = "../litebox_platform_linux_userland", default-features = false, features = ["optee_syscall"] }
litebox_platform_multiplex = { version = "0.1.0", path = "../litebox_platform_multiplex", default-features = false, features = ["platform_linux_userland_with_optee_syscall", "systrap_backend"] }
litebox_shim_optee = { version = "0.1.0", path = "../litebox_shim_optee", default-features = false, features = ["platform_linux_userland"] }
litebox_syscall_rewriter = { version = "0.1.0", path = "../litebox_syscall_rewriter" }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.142"

[dev-dependencies]

[lints]
workspace = true
