[package]
name = "litebox_runner_snp"
version = "0.1.0"
edition = "2024"

[features]
debug = []

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
litebox = { path = "../litebox", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
litebox_platform_multiplex = { path = "../litebox_platform_multiplex", version = "0.1.0", default-features = false, features = ["platform_linux_snp"] }
litebox_platform_linux_kernel = { path = "../litebox_platform_linux_kernel/", version = "0.1.0" }
litebox_shim_linux = { version = "0.1.0", path = "../litebox_shim_linux", default-features = false, features = ["platform_linux_snp"] }

[lints]
workspace = true
