[package]
name = "litebox_shim_bsd"
version = "0.1.0"
edition = "2024"

[dependencies]
litebox = { path = "../litebox", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux", version = "0.1.0" }
litebox_common_bsd = { path = "../litebox_common_bsd", version = "0.1.0" }
litebox_platform_multiplex = { path = "../litebox_platform_multiplex", version = "0.1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }

[features]
default = ["platform_linux_userland"]
platform_linux_userland = [
    "litebox_platform_multiplex/platform_linux_userland_with_linux_syscall",
    "litebox_platform_multiplex/systrap_backend",
]

[lints]
workspace = true
