[package]
name = "litebox_shim_linux"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
litebox_platform_multiplex = { path = "../litebox_platform_multiplex/", version = "0.1.0" }
once_cell = { version = "1.20.2", default-features = false, features = ["alloc", "race"] }
elf = { version = "0.7.4", default-features = false }
# Currently a specific commit (a6e338f1e97e95c192b305bd78be9dd3a54f4bf9) in
# https://github.com/weizhiao/rust-elfloader/ causes trouble on the latest
# released version of elf-loader, thus we limit ourselves to the released
# version right before it.
elf_loader = { version = "=0.10.0", default-features = false, features = [] }
thiserror = { version = "2.0.6", default-features = false }
ringbuf = { version = "0.4.8", default-features = false, features = ["alloc"] }
syscalls = { version = "0.6", default-features = false }

[target.'cfg(target_arch = "x86")'.dependencies]
# ELF loader requires us to enable the `rel` dependency on 32-bit to work.
# Enabling it on 64-bit on the other hand is incorrect and would not work. Thus,
# we need to do it as a target-specific dependency.
#
# NOTE: We must keep this in sync with the version above.
elf_loader = { version = "=0.10.0", default-features = false, features = ["rel"] }

[features]
unstable-testing = []

[lints]
workspace = true

[dev-dependencies]
arrayvec = { version = "0.7.6", default-features = false }
litebox_shim_linux = { path = ".", features = ["unstable-testing"] }
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }
