[package]
name = "litebox_shim_optee"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
bitflags = "2.9.0"
litebox = { path = "../litebox/", version = "0.1.0" }
litebox_common_linux = { path = "../litebox_common_linux/", version = "0.1.0" }
litebox_platform_multiplex = { path = "../litebox_platform_multiplex/", version = "0.1.0" }
num_enum = { version = "0.7.3", default-features = false }

[features]
unstable-testing = []

[lints]
workspace = true

[dev-dependencies]
litebox_shim_optee = { path = ".", features = ["unstable-testing"] }
